# collatz-conjecture

./: README.md  pyproject.toml
notebooks/: initial-explore.ipynb
